--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Luca M Jones | Photography
-email: your-email@domain.com
+email: lucamjones@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Photographs by Luca Messenger-Jones
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://192.168.0.5:4000/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.lucamjones.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: luca_mj
 
 # Build settings
